<resources>
    <string name="app_name">WeatherLess</string>
    <string name="button">Button</string>
    <string name="city">City</string>
    <string name="update">Update</string>
    <string name="type_city">Type city</string>
    <string name="tt">TT</string>
    <string name="temp">Temp</string>
    <string name="clouds">clouds</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>
    <string name="btn_modal">modal</string>
</resources>